cfn/sg.json
{
  "Description": "VGH Puppet Security Groups v0.0.1",

  "Parameters": {
    "VPCId": {"Type": "String", "Description": "The VPC ID"},
    "SSHLocations" : {
      "Type": "CommaDelimitedList",
      "Description" : "The IP address ranges that can be used to SSH to the EC2 instances"
    }
  },

  "Resources": {
    "InstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "EC2 Instance Firewall",
        "VpcId": {"Ref": "VPCId"}
      }
    },
    "InstanceSecurityGroupAllowSelf": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["InstanceSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "0", "ToPort": "65535", "SourceSecurityGroupId": {"Fn::GetAtt": ["InstanceSecurityGroup", "GroupId"]}
      }
    },
    "InstanceSecurityGroupAllowELB": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["InstanceSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "0", "ToPort": "65535", "SourceSecurityGroupId": {"Fn::GetAtt": ["ELBSecurityGroup", "GroupId"]}
      }
    },
    "InstanceSecurityGroupAllowSSH1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["InstanceSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::Select" : [ "0", {"Ref": "SSHLocations"} ] }
      }
    },

    "ELBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ELB Firewall",
        "VpcId": {"Ref": "VPCId"}
      }
    },
    "ELBSecurityGroupAllowHTTPS": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["ELBSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0"
      }
    },
    "ELBSecurityGroupAllowPuppet": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["ELBSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "8140", "ToPort": "8140", "CidrIp": "0.0.0.0/0"
      }
    },

    "RheaSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "MoM Firewall",
        "VpcId": {"Ref": "VPCId"}
      }
    },
    "RheaSecurityGroupAllowSelf": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["RheaSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "0", "ToPort": "65535", "SourceSecurityGroupId": {"Fn::GetAtt": ["InstanceSecurityGroup", "GroupId"]}
      }
    },
    "RheaSecurityGroupAllowPuppet": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["RheaSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "8140", "ToPort": "8140", "CidrIp": "0.0.0.0/0"
      }
    },
    "RheaSecurityGroupAllowSSH1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["RheaSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::Select" : [ "0", {"Ref": "SSHLocations"} ] }
      }
    },
    "DBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "RDS Firewall",
        "VpcId": {"Ref": "VPCId"}
      }
    },
    "DBSecurityGroupAllowInstancetoPostgreSQL": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["DBSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "5432", "ToPort": "5432", "SourceSecurityGroupId": {"Fn::GetAtt": ["InstanceSecurityGroup", "GroupId"]}
      }
    },
    "DBSecurityGroupAllowSSH1toPostgreSQL": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Fn::GetAtt": ["DBSecurityGroup", "GroupId"]}, "IpProtocol": "tcp", "FromPort": "5432", "ToPort": "5432", "CidrIp": { "Fn::Select" : [ "0", {"Ref": "SSHLocations"} ] }
      }
    }
  },

  "Outputs": {
    "InstanceSecurityGroup": {
      "Description": "The Instance security group",
      "Value": {"Ref" : "InstanceSecurityGroup"}
    },
    "ELBSecurityGroup": {
      "Description": "The Elastic Load Balancer security group",
      "Value": {"Ref" : "ELBSecurityGroup"}
    },
    "RheaSecurityGroup": {
      "Description": "Puppet Master of Masters security group",
      "Value": {"Ref" : "RheaSecurityGroup"}
    },
    "DBSecurityGroup": {
      "Description": "The database security group",
      "Value": {"Ref" : "DBSecurityGroup"}
    }
  }
}
